--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
+    "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.0"
+    "react-router-dom": "^7.1.0",
+    "react-super-responsive-table": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
