--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
     "flowbite-react": "^0.10.2",
+    "framer-motion": "^11.15.0",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
